force-app/main/default/objects/Workout__c/Workout__c.object-meta.xml
<CustomObject>
    <description>Workout performed by a member</description>
    <label>Workout</label>
    <nameField>
        <displayFormat>WK-{00000}</displayFormat>
        <label>Workout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>