force-app/main/default/objects/Workout__c/fields/Date_of_Workout__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Workout__c</fullName>
    <description>Date when the Workout was performed</description>
    <label>Date of Workout</label>
    <required>true</required>
    <type>Date</type>
</CustomField>