force-app/main/default/objects/Workout__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <description>Link to the Person Account that performed the Workout</description>
    <label>Member</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Workouts</relationshipLabel>
    <relationshipName>Workouts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>