force-app/main/default/objects/Workout__c/fields/Workout_Name__c.field-meta.xml
<CustomField>
    <fullName>Workout_Name__c</fullName>
    <description>Workout Name</description>
    <label>Workout Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>